// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToggleField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-2:active .emotion-7[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-2[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.125rem;
}

.emotion-6 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-6:hover {
  background-color: #d9dadd;
}

.emotion-6:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-6:focus-within,
.emotion-6:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-6[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-6[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-6[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-6[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-6[data-checked="true"]:focus-within,
.emotion-6[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-6[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-6[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-6[data-error="true"]:focus-within,
.emotion-6[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-6[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-6[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-6[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-8 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-8[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <label
        aria-disabled="false"
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        />
        <div
          class="emotion-6 emotion-7"
          data-checked="false"
          data-disabled="false"
          data-error="false"
        >
          <input
            aria-checked="false"
            class="emotion-8 emotion-9"
            id="«r0»"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;

exports[`ToggleField > should render correctly checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-2:active .emotion-7[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-2[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.125rem;
}

.emotion-6 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-6:hover {
  background-color: #d9dadd;
}

.emotion-6:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-6:focus-within,
.emotion-6:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-6[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-6[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-6[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-6[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-6[data-checked="true"]:focus-within,
.emotion-6[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-6[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-6[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-6[data-error="true"]:focus-within,
.emotion-6[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-6[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-6[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-6[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-8 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-8[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <label
        aria-disabled="false"
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        />
        <div
          class="emotion-6 emotion-7"
          data-checked="true"
          data-disabled="false"
          data-error="false"
        >
          <input
            aria-checked="true"
            checked=""
            class="emotion-8 emotion-9"
            id="«r4»"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;

exports[`ToggleField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-2:active .emotion-7[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-2[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.125rem;
}

.emotion-6 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-6:hover {
  background-color: #d9dadd;
}

.emotion-6:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-6:focus-within,
.emotion-6:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-6[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-6[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-6[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-6[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-6[data-checked="true"]:focus-within,
.emotion-6[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-6[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-6[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-6[data-error="true"]:focus-within,
.emotion-6[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-6[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-6[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-6[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-8 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-8[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <label
        aria-disabled="true"
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        />
        <div
          class="emotion-6 emotion-7"
          data-checked="false"
          data-disabled="true"
          data-error="false"
        >
          <input
            aria-checked="false"
            class="emotion-8 emotion-9"
            disabled=""
            id="«r2»"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;

exports[`ToggleField > should render correctly with label and checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-2:active .emotion-11[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-2[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.125rem;
}

.emotion-6 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-8 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-10:hover {
  background-color: #d9dadd;
}

.emotion-10:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-10:focus-within,
.emotion-10:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-10[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-10[data-checked="true"] {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-10[data-checked="true"]:hover {
  background-color: #792dd4;
}

.emotion-10[data-checked="true"]:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-10[data-checked="true"]:focus-within,
.emotion-10[data-checked="true"]:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-10[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-10[data-disabled="true"][data-checked="true"] {
  background: #e5dbfd;
}

.emotion-10[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-10[data-error="true"]:focus-within,
.emotion-10[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-10[data-error="true"][data-checked="true"] {
  background-color: #e51963;
}

.emotion-10[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-10[data-error="true"][data-disabled="true"][data-checked="true"] {
  background-color: #ffd3e3;
}

.emotion-12 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-12[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <label
        aria-disabled="false"
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7"
          >
            <span
              class="emotion-8 emotion-9"
            >
              test
            </span>
          </div>
        </div>
        <div
          class="emotion-10 emotion-11"
          data-checked="true"
          data-disabled="false"
          data-error="false"
        >
          <input
            aria-checked="true"
            checked=""
            class="emotion-12 emotion-13"
            id="«r6»"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;
